feat: migrate auth from JWT to Firebase, add addresses and profile
- Replace JWT auth with Firebase Authentication (phone OTP, Google, email/password)
- Add Firebase Admin SDK on server, Firebase SDK on client
- Update auth middleware to verify Firebase ID tokens with user cache
- Fix async error handling in auth middleware (use next() instead of throw)
- Fix 401 response interceptor to only redirect on auth-required routes
- Add address model, routes, and controller
- Add customer profile page and WhatsApp field
- Add dotenv.config() in firebase.ts to ensure env vars load
- Add CLAUDE.md with project setup instructions

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,14 @@
 # Server
 DATABASE_URL=postgresql://user:password@localhost:5432/veggie_store
-JWT_SECRET=your-jwt-secret-here
 PORT=3000
 CLIENT_URL=http://localhost:5173
+FIREBASE_SERVICE_ACCOUNT_JSON=<entire service account JSON as one line>
 
 # Client (prefix with VITE_)
 VITE_API_URL=http://localhost:3000/api
+VITE_FIREBASE_API_KEY=your-api-key
+VITE_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=your-project-id
+VITE_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=your-sender-id
+VITE_FIREBASE_APP_ID=your-app-id
