--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,3 @@
 DATABASE_URL="postgresql://veggie:veggie123@localhost:5432/veggie_store?schema=public"
-JWT_SECRET="your-secret-key-change-in-production"
 PORT=3000
+FIREBASE_SERVICE_ACCOUNT_JSON={"type":"service_account","project_id":"...","private_key_id":"...","private_key":"...","client_email":"...","client_id":"...","auth_uri":"...","token_uri":"...","auth_provider_x509_cert_url":"...","client_x509_cert_url":"..."}
