--- a/server/package.json
+++ b/server/package.json
@@ -10,26 +10,20 @@
   },
   "dependencies": {
     "@prisma/client": "^6.3.0",
-    "prisma": "^6.3.0",
-    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^8.2.1",
+    "firebase-admin": "^13.6.1",
     "helmet": "^8.1.0",
-    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "prisma": "^6.3.0",
     "zod": "^3.24.1"
   },
-  "prisma": {
-    "seed": "tsx prisma/seed.ts"
-  },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/helmet": "^0.0.48",
-    "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^2.0.0",
     "@types/node": "^22.12.0",
     "tsx": "^4.19.2",
